# visual_learning

./: README.md
class 14-op_of_p_and_v/: readme.md
class14-op_of_p_and_v/: c14-vedio.py  class14-image.py  readme.md
class15-ImageProcessing/: c15  c15-gray.py  c15-hsv.py  c15.cpp  readme.md
class16-camera/: c16.py  readme.md
class19-Ros2/: readme.md
class19-Ros2/ros_ws/install/: local_setup.sh  setup.sh
class19-Ros2/ros_ws/install/c19/lib/c19/: video_process  video_read
class19-Ros2/ros_ws/install/c19/share/c19/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
class19-Ros2/ros_ws/log/: latest_build
class19-Ros2/ros_ws/src/c19/: CMakeLists.txt
class19-Ros2/ros_ws/src/c19/src/node/: video_process.cpp  video_read.cpp
class19-Ros2/ros_ws/src/c19/src/video_processing/: video_process-opencv.cpp  video_process-opencv.h
class7-student_management/student_management/: readme.md
class7-student_management/student_management/include/: Student.h  StudentManager.h
class7-student_management/student_management/src/: Student.cpp  StudentManager.cpp  main.cpp
the final/: readme.md
the final/install/: local_setup.sh  setup.sh
the final/install/aim_interfaces/share/aim_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
the final/install/final/lib/final/: final  testnode
the final/install/final/share/final/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
the final/log/: latest_build
the final/src/aim_interfaces/: CMakeLists.txt
the final/src/final/: CMakeLists.txt
the final/src/final/src/: final.cpp  final.h  testnode.cpp
(+35 files in other folders)
